--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html>
 <head>
 <title>Privacy Policy</title>
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+
+    <style>
+        @media (max-width: 400px) {
+            h3 {
+                font-size: 1.5em;
+            }
+            p {
+                font-size: 1em;
+                padding: 0 10px;
+            }
+        }
+    </style>
 </head>
 <body>
 
