--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color:#141318; color:#e6e1e9; font-family: Arial, sans-serif; margin: 0; padding: 20px;>
 
 <p data-pm-slice="1 1 []"><span><strong>Privacy Policy for Kids Math Game</strong></span></p>
 <p><span>Effective Date: <strong>February 01, 2025</strong></span></p>
