--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <h3><span>7. Changes to This Privacy Policy</span></h3>
 <p><span>We may update this Privacy Policy periodically. Any changes will be reflected within the app and on our website (if applicable).</span></p>
 <h3><span>8. Contact Us</span></h3>
-<p><span>If you have any questions about this Privacy Policy, feel free to contact us at: <strong>softmobixbd@gmail.com</strong></span></p>
+<p><span>If you have any questions about this Privacy Policy, feel free to contact us at: <strong><a href="mailto:softmobixbd@gmail.com">softmobixbd@gmail.com</a></strong></span></p>
 <hr>
 <p>&nbsp;</p>
 
