--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<body style="background-color:#141318; color:#e6e1e9; font-family: Arial, sans-serif; margin: 0; padding: 20px;>
+<body style="background-color:#141318; color:#e6e1e9; font-family: Arial, sans-serif; margin: 0; padding: 20px;">
 
 <p data-pm-slice="1 1 []"><span><strong>Privacy Policy for Kids Math Game</strong></span></p>
 <p><span>Effective Date: <strong>February 01, 2025</strong></span></p>
@@ -47,7 +47,61 @@
 <h3><span>7. Changes to This Privacy Policy</span></h3>
 <p><span>We may update this Privacy Policy periodically. Any changes will be reflected within the app and on our website (if applicable).</span></p>
 <h3><span>8. Contact Us</span></h3>
-<p><span>If you have any questions about this Privacy Policy, feel free to contact us at: <strong><a href="mailto:softmobixbd@gmail.com">softmobixbd@gmail.com</a></strong></span></p>
+<p><span>If you have any questions about this Privacy Policy, feel free to contact us at: <strong><a <!DOCTYPE html>
+<html>
+<head>
+<title>Privacy Policy</title>
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+
+    <style>
+        @media (max-width: 400px) {
+            h3 {
+                font-size: 1.5em;
+            }
+            p {
+                font-size: 1em;
+                padding: 0 10px;
+            }
+        }
+    </style>
+</head>
+<body style="background-color:#141318; color:#e6e1e9; font-family: Arial, sans-serif; margin: 0; padding: 20px;">
+
+<p data-pm-slice="1 1 []"><span><strong>Privacy Policy for Kids Math Game</strong></span></p>
+<p><span>Effective Date: <strong>February 01, 2025</strong></span></p>
+<p><span>Thank you for using the "Kids Math Game." Your privacy is important to us. This Privacy Policy explains how we handle user data and ensure compliance with applicable laws, including the <strong>Children’s Online Privacy Protection Act (COPPA)</strong> and the <strong>General Data Protection Regulation for Kids (GDPR-K).</strong></span></p>
+<h3><span>1. Information We Collect</span></h3>
+<p><span>We <strong>do not collect any personal data</strong> from users of our app. <strong>No names, email addresses, location data, or other personally identifiable information</strong> is gathered.</span></p>
+<h3><span>2. Third-Party Services We Use</span></h3>
+<p><span>To improve the app experience, we use the following third-party services:</span></p>
+<ul data-spread="false">
+    <li><span><strong>Firebase (Crashlytics &amp; Notifications)</strong>: Helps us analyze crashes and send important updates via push notifications.</span></li>
+    <li><span><strong>Google AdMob</strong>: Displays ads within the app. We ensure all ads comply with child-safety guidelines, and "Child-Directed Treatment" is enabled to meet <strong>COPPA</strong> and <strong>GDPR-K</strong> standards.</span></li>
+</ul>
+<h3><span>3. Advertisements</span></h3>
+<p><span>We use <strong>Google AdMob</strong> to monetize the app. AdMob may collect <strong>non-personalized data</strong> to serve relevant child-safe ads. These ads comply with Google’s <strong>Families Policy.</strong></span></p>
+<h3><span>4. Permissions Used</span></h3>
+<p><span>Our app requests <strong>notification permission</strong> to send push notifications via Firebase. No other device permissions (camera, storage, microphone, etc.) are required.</span></p>
+<h3><span>5. Compliance with Child Protection Laws</span></h3>
+<p><span>Since our app is designed for children, we strictly follow <strong>COPPA</strong> and <strong>GDPR-K</strong> guidelines:</span></p>
+<ul data-spread="false">
+    <li><span>No personal data is collected.</span></li>
+    <li><span>No user accounts or sign-ups are required.</span></li>
+    <li><span>Only <strong>child-safe ads</strong> are displayed.</span></li>
+    <li><span>Parental consent is <strong>not required</strong>, as we do not collect any child data.</span></li>
+</ul>
+<h3><span>6. Data Security</span></h3>
+<p><span>We do not store or share any personal data. However, third-party services like Firebase and AdMob may process limited, non-personalized data as per their policies.</span></p>
+<h3><span>7. Changes to This Privacy Policy</span></h3>
+<p><span>We may update this Privacy Policy periodically. Any changes will be reflected within the app and on our website (if applicable).</span></p>
+<h3><span>8. Contact Us</span></h3>
+<p><span>If you have any questions about this Privacy Policy, feel free to contact us at: <strong><a style=" color: #ffd8e5;" href="mailto:softmobixbd@gmail.com">softmobixbd@gmail.com</a></strong></span></p>
+<hr>
+<p>&nbsp;</p>
+
+</body>
+</html> href="mailto:softmobixbd@gmail.com">softmobixbd@gmail.com</a></strong></span></p>
 <hr>
 <p>&nbsp;</p>
 
